--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="item">
       <div class="item-nome">Sexo</div>
       <div class="item-conteudo">
+        <!-- difetente de como estava o seu codigo aqui eu passo um valor para o input masculino/feminino pq dai la no script eu consigo pegar esse valor especifico -->
         <input type="radio" checked name="radsex" value="masculino"> Masculino
         <input type="radio" name="radsex" value="feminino"> Feminino
       </div>
@@ -28,6 +29,7 @@
     <div class="item">
       <div class="item-nome">Time</div>
       <div class="item-conteudo">
+        <!-- mesma coisa aqui -->
         <input type="radio" checked name="radtime" value="colorado"> Internacional
         <input type="radio" name="radtime" value="gremista"> Grêmio
       </div>
@@ -40,6 +42,7 @@
   <div id="resultado-container" class="container">
     <div id="resultado-texto" class="item-nome">Time</div>
     <div class="caixa-img">
+      <!-- é aqui onde a imagem sera jogada, tambem modifiquei como tinha feito para ficar melhor -->
       <img id="img" src="">
     </div>
   </div>
